# memory-flusher

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  README.md
deploy/: deploy.yaml
src/: main.rs  test.rs
