[package]
name = "kube-node-memory-flusher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-unit = "3.1.4"
clap = { version = "4.4.11", features = ["derive"] }
env_logger = "0.10.1"
ex = "0.1.3"
failure = "0.1.8"
log = "0.4.20"
walkdir = "2.4.0"
